src/objects/SitespagesSettings__c.object
<CustomObject>
    <fields>
        <fullName>Allowed_File_Extensions__c</fullName>
        <label>Allowed File Extensions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>doc</fullName>
                </value>
                <value>
                    <fullName>jpeg</fullName>
                </value>
                <value>
                    <fullName>pdf</fullName>
                </value>
                <value>
                    <fullName>png</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type_Id__c</fullName>
        <label>Case Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Duplicate_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field enables the code to prevent users to create multiple cases. Displays error message if a contact has already created a case for the local product, comment.</description>
        <inlineHelpText>This field enables the code to prevent users to create multiple cases. Displays error message if a contact has already created a case for the local product, comment. Error message will get from the field &apos;Duplicate Case Error Msg&apos;.</inlineHelpText>
        <label>Check Duplicate Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clairol_Segment_name__c</fullName>
        <label>Segment Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <inlineHelpText>Ex: United States of America, Japan, Canada, ..</inlineHelpText>
        <label>Country Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB_Type__c</fullName>
        <label>DOB Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MM/YYYY</fullName>
                </value>
                <value>
                    <fullName>Age Range</fullName>
                </value>
                <value>
                    <fullName>Age Range With 2 Options</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Product_Image_Url__c</fullName>
        <description>Image that shows up if product image is not set on local product</description>
        <inlineHelpText>Image that shows up if product image is not set on local product</inlineHelpText>
        <label>Default Product Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Disclaimer_Msg__c</fullName>
        <label>Disclaimer Msg</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_ALL_Phone_Numbers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You should first enable &apos;Phone Channel&apos; in order to display phone numbers from all countries.</inlineHelpText>
        <label>Display ALL Phone Numbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Case_Error_Msg__c</fullName>
        <description>This error message will be shown on page when duplicate cases are found. This field is being used by the field &apos;Check Duplicate Case&apos; field.</description>
        <inlineHelpText>This error message will be shown on page when duplicate cases are found. This field is being used by the field &apos;Check Duplicate Case&apos; field.</inlineHelpText>
        <label>Duplicate Case Error Msg</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EM_CaptchaReq__c</fullName>
        <label>EM_CaptchaReq</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_MinAgeAlert__c</fullName>
        <label>Minimum Age Alert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_Optin1Req__c</fullName>
        <label>EM_Optin1Req</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_Optin2Req__c</fullName>
        <label>EM_Optin2Req</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_Optin3Req__c</fullName>
        <inlineHelpText>Error message for &apos;Optin Msg3&apos;</inlineHelpText>
        <label>EM Optin3Req</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_TermsAndCond_Req__c</fullName>
        <inlineHelpText>This message will be shown to user if Terms and Conditions field left blank</inlineHelpText>
        <label>Alert message for Terms&amp;Cond.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Chat_Channel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will show Chat option on public knowledge base</description>
        <inlineHelpText>It will show Chat option on public knowledge base</inlineHelpText>
        <label>Enable Chat Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Email_Channel_2__c</fullName>
        <inlineHelpText>Insert &apos;Contact Us&apos; URL where consumers will send emails.</inlineHelpText>
        <label>Enable Email Channel</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Enable_Phone_Channel2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will enable the phone channels on the PKB site</description>
        <inlineHelpText>By enable this option, you will see Phone numbers belong to the country that the Sitespage belongs to.</inlineHelpText>
        <label>Enable Phone Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Product_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Product Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_iFrame__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is for PKB. It enables iFrame version.</inlineHelpText>
        <label>Enable iFrame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Chat_URL__c</fullName>
        <inlineHelpText>Insert external chat URL</inlineHelpText>
        <label>External Chat URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fields_Position__c</fullName>
        <label>Fields Position</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salutation</fullName>
                </value>
                <value>
                    <fullName>First Name</fullName>
                </value>
                <value>
                    <fullName>Last Name</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Age Range</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Address Linie1</fullName>
                </value>
                <value>
                    <fullName>Address Line2</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>State/Province</fullName>
                </value>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>Production Code</fullName>
                </value>
                <value>
                    <fullName>UPC Code</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fulfillment_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Item</label>
        <referenceTo>Fulfillment_Item__c</referenceTo>
        <relationshipLabel>SitespagesSettings</relationshipLabel>
        <relationshipName>SitespagesSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Captcha_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Captcha Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_2__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Slovakian</fullName>
                </value>
                <value>
                    <fullName>Slovenian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>Ex: en, fr, es, ja ...</inlineHelpText>
        <label>Language Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveAgent_Code__c</fullName>
        <inlineHelpText>Paste SFDC Chat button code and Deployment code.</inlineHelpText>
        <label>LiveAgent Code</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveAgent_Postchat_Form__c</fullName>
        <formula>&apos;http://temp-pgconsumercare.cs1.force.com/ContactUs/LiveAgentPostchatForm?siteid=&apos;+ SiteIdentifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LiveAgent Postchat Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveAgent_Prechat_Form__c</fullName>
        <formula>&apos;http://temp-pgconsumercare.cs1.force.com/ContactUs/LiveAgentPrechatForm?siteid=&apos;+ SiteIdentifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LiveAgent Prechat Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Comment_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Comment</label>
        <referenceTo>Local_Comment_Code__c</referenceTo>
        <relationshipLabel>SitespagesSettings</relationshipLabel>
        <relationshipName>SitespagesSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Product</label>
        <referenceTo>Local_Product__c</referenceTo>
        <relationshipLabel>SitespagesSettings</relationshipLabel>
        <relationshipName>SitespagesSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logo_Height__c</fullName>
        <label>Logo Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Name__c</fullName>
        <label>Logo Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Width__c</fullName>
        <label>Logo Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDO__c</fullName>
        <label>MDO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAI</fullName>
                </value>
                <value>
                    <fullName>CEEMEA</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NEA</fullName>
                </value>
                <value>
                    <fullName>WE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Attachment_Size__c</fullName>
        <defaultValue>2097152</defaultValue>
        <description>Size in bytes. 1kb = 1024 bytes. 2Mb = 2097152 bytes</description>
        <label>Max Attachment Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Age__c</fullName>
        <label>Minimum Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optin_Msg2__c</fullName>
        <label>Optin Msg2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Optin_Msg3__c</fullName>
        <label>Optin Msg3</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Optin_Msg__c</fullName>
        <label>Optin Msg1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PG_Safety_Page_URL__c</fullName>
        <formula>&apos;https://pgconsumercare.secure.force.com/ContactUs/PGSafetyContactUs?siteid=&apos;+ SiteIdentifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG Safety Page URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_URL__c</fullName>
        <formula>$Setup.ContactUsURL__c.URL__c + &apos;/SitesContactUsV3?sid=&apos; + SiteIdentifier__c +
IF(ISBLANK(Language__c), &apos;&apos;, &apos;&amp;lang=&apos; + Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Page URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Account_Record_Type_Id__c</fullName>
        <label>PersonAccount RecType Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_1_Queue_Id__c</fullName>
        <label>Priority 1 Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_2_Queue_Id__c</fullName>
        <label>Priority 2 Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_3_Queue_Id__c</fullName>
        <label>Priority 3 Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_Height__c</fullName>
        <description>Height of the product image in the search results</description>
        <label>Product Image Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Image_Width__c</fullName>
        <description>Width of the product image in the search results</description>
        <label>Product Image Width</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_Knowledge_URL__c</fullName>
        <formula>&apos;http://temp-pgconsumercare.cs1.force.com/pkb/pkb_home?siteid=&apos;+ SiteIdentifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Public Knowledge URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Code__c</fullName>
        <label>Quick Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_URL__c</fullName>
        <inlineHelpText>URL to be used to redirect the consumer when &apos;Product Complaint&apos; and product is no available.</inlineHelpText>
        <label>Return URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Secure_Page_URL__c</fullName>
        <formula>$Setup.ContactUsURL__c.URL__c + &apos;/SitesContactUsV3?sid=&apos; + SiteIdentifier__c + 
IF(ISBLANK(Language__c), &apos;&apos;, &apos;&amp;lang=&apos; + Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secure Page URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Segments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Control the Segment field on the new sites pages.</inlineHelpText>
        <label>Show Segments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiteIdentifier__c</fullName>
        <label>SiteIdentifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Site_Heading__c</fullName>
        <label>Site Heading</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermsAndConditions__c</fullName>
        <label>TermsAndConditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Thank_you_page_Content__c</fullName>
        <label>Thank you page Content</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_Msg__c</fullName>
        <label>Unsubscribe Msg</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Use_Default_Field_Position__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Default Field Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Acknowledge__c</fullName>
        <inlineHelpText>Insert the message to be shown on the page. Consumer has to click the checkbox before submitting the form.</inlineHelpText>
        <label>User Acknowledge</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SitespagesSettings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SietesPage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SitespagesSettings</pluralLabel>
    <recordTypes>
        <fullName>LiveAgent</fullName>
        <active>true</active>
        <label>LiveAgent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Public_Knowledge</fullName>
        <active>true</active>
        <label>Public Knowledge</label>
    </recordTypes>
    <recordTypes>
        <fullName>SFDC_TEST</fullName>
        <active>false</active>
        <label>SFDC TEST</label>
    </recordTypes>
    <recordTypes>
        <fullName>Safety_ContactUs</fullName>
        <active>true</active>
        <description>It represents Safety (Crisis) pages</description>
        <label>Safety ContactUs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sites_ContactUs</fullName>
        <active>true</active>
        <description>This is general contact page being used by all brands</description>
        <label>Sites ContactUs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sites_ContactUsV2</fullName>
        <active>true</active>
        <label>Sites ContactUsV2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sites_ContactUsV2_TEST</fullName>
        <active>false</active>
        <label>Sites ContactUsV2 TEST</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ReturnURL_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( !BEGINS(Return_URL__c, &apos;http&apos;), true, false )</errorConditionFormula>
        <errorMessage>Return URL should start with either http:// or https://</errorMessage>
    </validationRules>
</CustomObject>